# eag14a

computer_agent/: README.md  log_config.py  main.py  pyproject.toml  test_agent.py  test_pipeline.py
computer_agent/agent/: computer_agent.py
computer_agent/agent/core/: context.py  decision.py  execution.py  loop.py  perception.py  summary.py
computer_agent/agent/mcp/: simple_mcp.py
computer_agent/agent/models/: mode_manager.py
computer_agent/agent/prompts/: decision_prompt.txt  perception_prompt.txt  summary_prompt.txt
computer_agent/agent/utils/: helpers.py
computer_agent/config/: log_config.py  mcp_server_config.yaml
computer_agent/outputs/2025/06/06/session_20250606_130930/: screenshot_20250606_130930_enhanced_v1_06-06.json  screenshot_20250606_130930_gemini_analysis_13-09.json  session_summary.json
computer_agent/outputs/2025/06/06/session_20250606_131402/: screenshot_20250606_131402_enhanced_v1_06-06.json  screenshot_20250606_131402_gemini_analysis_13-14.json  session_summary.json
computer_agent/pipeline/: pipeline.py  pipeline_test.py  pipeline_utils.py  screenshot.py  test_pipeline.py
computer_agent/src/windowManager/: README.md  legend.txt  mcp_server_windows.py  mcp_server_windows_interactive_client.py  mcp_server_windows_paint_test.py  mcp_server_windows_test.py  safe_applications.json  window_manager.py  window_screengrab.py
computer_agent/utils/: config.json  gemini_integration_test.py  output_manager.py  prompt.txt  prompt_test.txt  seraphine_processor.py
(+152 files in other folders)
